Fixed 'jumping' issues when using Pushpop in conjunction with the Twitter Bootstrap toolbar.

--- a/pushpop.css
+++ b/pushpop.css
@@ -1,5 +1,4 @@
 html, body {
-  width: 100%;
   height: 100%;
 }
 
@@ -7,14 +6,20 @@ html.transition, html.transition > body {
   overflow: hidden;
 }
 
+html.transition .topbar {
+  z-index: 999998;
+}
+
+.topbar ~ .view {
+  margin-top: 40px;
+}
+
 .view {
   border: 0;
-  display: none;
-  position: relative;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
+  display: none;
+  position: relative;
 }
 
 .view.active {
@@ -24,6 +29,8 @@ html.transition, html.transition > body {
 .view.push, .view.pop {
   display: block;
   position: absolute;
+  overflow: hidden;
+  z-index: 1;
 }
 
 /* slideHorizontal */
@@ -164,6 +171,7 @@ html.transition, html.transition > body {
   transition: all 1s ease;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  z-index: 999999;
 }
 
 .view.push.flipHorizontal {
@@ -402,6 +410,7 @@ html.transition, html.transition > body {
   /* Disabled for performance on Gecko */
   /*-moz-box-shadow: 0 2px 12px rgba(0, 0, 0, 1);
     box-shadow: 0 2px 12px rgba(0, 0, 0, 1);*/
+  z-index: 999999;
 }
 
 .view.push.zoom {
